# soltok-bridge

./: .gitignore  App.tsx  DEPLOYMENT.md  EMBEDDED_VIEW_FEATURE.md  README.md  TEST_ON_WEBSITE.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  supabase-schema-v2.sql  supabase-schema.sql  tsconfig.json  types.ts  vercel.json  vite.config.ts
api/: create-order.ts  order-status.ts  scrape-tiktok.ts  send-email.ts  test-tiktok-api-scraper.ts  verify-product.ts
components/: AnalyticsDashboard.tsx  ArchitectureView.tsx  Celebration.tsx  DemoModeBanner.tsx  FulfillmentTracker.tsx  NetworkBanner.tsx  OperatorDashboard.tsx  OperatorLogin.tsx  OrderManager.tsx  OrderStatusPage.tsx  ProductGallery.tsx  ProductModal.tsx  SetupGuide.tsx  Skeleton.tsx  Toast.tsx  VoiceAssistant.tsx  WishlistView.tsx
extension/: manifest.json  popup.html  test-extension.html  test-page.html
extension/assets/: README.md
extension/src/: background.js  content.css  content.js  popup.js
programs/escrow/: Anchor.toml  Cargo.toml
programs/escrow/src/: lib.rs
scripts/: deploy_anchor.sh  initialize-escrow.ts  local-test.sh
services/: geminiService.ts
src/components/: TikTokProductViewer.tsx  index.ts
src/contexts/: OperatorContext.tsx  WalletContext.tsx
src/hooks/: useAnalytics.ts  useDemoMode.ts  useEscrow.ts  useOrderStorage.ts  useOrders.ts
src/idl/: escrow.json
src/lib/: email.ts  supabase.ts
src/pages/: Landing.tsx
src/services/: escrowService.ts
