[package]
name = "soltok-escrow"
version = "0.1.0"
description = "SolTok Bridge Escrow Program for USDC deposits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soltok_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
